v0.x.x. Cleanup: move to Rspec; remove GemLoger

v0.4.10 Switch to jeweler; remove dependencies that were superfluous

v0.4.9  Added gem logging for debugging help when tracking down Gem activation errors

v0.2.3  Updating Micronaut

v0.2.0. Better log output of objects based on their type, very similar to Logger/irb behavior; update to micronaut 0.1.0

v0.1.5. Clean up specs and remove noise from spec run

v0.1.4. Micronauts Unite! Test Suite now runs via Micronaut - http://github.com/spicycode/micronaut/

v0.1.3. Use plain old echoe; really fix rubygems errors (I hope)

v0.1.2. Attempting to fix rubygems errors

v0.1.1. Handle exceptions from within the block

v0.1.0. Specify, clean up

v0.0.6. changed to mixing to Object by default - set ENV["SAFE_LOG_BUDDY"] = true to override

v0.0.5. update echoe dependency to work with github

v0.0.4. add dev dependencies, remove gem calls from rdoc task

v0.0.3. specs and tweaks

v0.0.2. rdocs; support for multiple statements in one "d" call separated by semicolons

v0.0.1. Initial release to github; Birthday