@@ -1,8 +1,8 @@
 module LogBuddy
-  module VERSION #:nodoc:
+  module Version #:nodoc:
     MAJOR = 0
     MINOR = 4
-    TINY  = 9
+    TINY  = 12
 
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
